Updated languages es, es-mx, de. Removed languages eu, nn, nb, gl. Fixed Wikipedia overflow show scroll. In webpack.config.js set analyzerMode: 'disabled'. Signed-off-by: Joseph Rézeau <joseph@rezeau.org>

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,7 +165,10 @@
 
   .tl-slide .tl-slide-content-container .tl-slide-content .tl-media {
     width: 50%;
-    overflow: scroll;
+  }
+
+  .tl-slide .tl-slide-content-container .tl-slide-content .tl-media .tl-media-content {
+    overflow-y: auto;
     max-height: calc( var(--h5p-timeline-slide-height) - 32px );
   }
 
